# zeromux

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_ZH.md  TMUX_ATTACH.md  start.sh
docs/: notes-enhancement-tasks.md  notes-enhancement.md  p1-auth-system.md  p2a-session-notes-file-viewer.md  teamwork_enhanced_tasks.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AcpChatView.tsx  AdminPanel.tsx  GitViewer.tsx  LoginPage.tsx  MarkdownViewer.tsx  SessionInfoBar.tsx  Sidebar.tsx  TerminalView.tsx  WaitingPage.tsx  markdownStyles.tsx
frontend/src/lib/: api.ts  base64.ts  theme.ts
src/: admin.rs  auth.rs  db.rs  logger.rs  main.rs  notes.rs  oauth.rs  pty_bridge.rs  session_manager.rs  web.rs  ws_handler.rs
src/acp/: kiro_process.rs  mod.rs  process.rs  ws_handler.rs
