[package]
name = "zeromux"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "set-header"] }
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = { version = "8", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
mime_guess = "2"
zstd = "0.13"
http = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = "9"

[profile.release]
opt-level = "z"
lto = true
strip = true
